v1.2.0/_sources/plc-kfe-rix-vac_links.rst.txt

Links
-----

.. csv-table::
    :header: Owner A, Item A, Owner B, Item B
    :align: center

        InputDst, GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_PIP_2.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 4 (EL3064), AI Standard Channel 2^Value
        InputDst, GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_PIP_2.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 5 (EL1004), Channel 2^Input
        InputDst, GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 54 (EL1004), Channel 3^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xSP_DI
        InputDst, GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 72 (EL1124), Channel 3^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xSP_DI
        InputDst, GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 72 (EL1124), Channel 4^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xSP_DI
        InputDst, GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL3174_05_11, AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GPI_1.i_iPRESS_R
        OutputSrc, GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_PIP_2.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EL2794), Channel 2^Output
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xCLS_SW, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xCLS_SW
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 32 (EK1122)^B940-008-K0S15-PNL-03 FS^Term 36 (EL1004), Channel 1^Input
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOPN_SW, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xOPN_SW
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 32 (EK1122)^B940-008-K0S15-PNL-03 FS^Term 36 (EL1004), Channel 2^Input
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideMode, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xOverrideMode
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideOpen, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xOverrideOpen
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xPress_OK, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xPRESS_OK
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xTrigger, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 72 (EL1124), Channel 1^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xTrigger
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVAC_FAULT_Reset, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xVAC_FAULT_Reset
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveClosed, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xVetoValveClosed
        plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveOpenDO, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xVetoValveOpenDO
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FSV_PMPS.g_FastFaultOutput2.q_xFastFaultOut, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_FFO (EL2202), Channel 2^Output
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_eVFS_State, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_eVFS_State
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xClose_A, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 32 (EK1122)^B940-008-K0S15-PNL-03 FS^Term 34 (EL2202), Channel 1^Output
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xClose_B, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 32 (EK1122)^B940-008-K0S15-PNL-03 FS^Term 34 (EL2202), Channel 2^Output
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xClose_C, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 32 (EK1122)^B940-008-K0S15-PNL-03 FS^Term 35 (EL2202), Channel 1^Output
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xMPS_OK, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xMPS_OK
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 32 (EK1122)^B940-008-K0S15-PNL-03 FS^Term 35 (EL2202), Channel 2^Output
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xTrigger, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xTrigger
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVAC_FAULT_OK, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xVAC_FAULT_OK
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Closed, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xVFS_Closed
        plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Open, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xVFS_Open
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL3174_03_12, AI Standard Channel 2^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1124_03_11, Channel 4^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1124_03_11, Channel 3^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 91 (EL3174-0002), AI Standard Channel 1^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.i_xError, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 93 (EL1124), Channel 2^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.i_xError
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.i_xIP_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 93 (EL1124), Channel 1^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.i_xIP_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL3174_04_09, AI Standard Channel 1^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1124_04_07, Channel 2^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1124_04_07, Channel 1^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 91 (EL3174-0002), AI Standard Channel 2^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.i_xError, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 93 (EL1124), Channel 4^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.i_xError
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.i_xIP_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 93 (EL1124), Channel 3^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.i_xIP_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL3174_04_09, AI Standard Channel 3^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1124_04_08, Channel 2^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1124_04_08, Channel 1^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 91 (EL3174-0002), AI Standard Channel 3^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.i_xError, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 94 (EL1124), Channel 2^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.i_xError
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.i_xIP_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 94 (EL1124), Channel 1^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.i_xIP_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL3174_05_11, AI Standard Channel 2^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL1124_05_09, Channel 4^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL1124_05_09, Channel 3^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 53 (EL3064), AI Standard Channel 2^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 54 (EL1004), Channel 2^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_PIP_1.i_xSP_DI
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_IM6K2_PPM_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EP3174_06_01, AI Standard Channel 2^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 91 (EL3174-0002), AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.i_xError, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 94 (EL1124), Channel 4^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.i_xError
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.i_xIP_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 94 (EL1124), Channel 3^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.i_xIP_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_LI3K2_K2B_VWC_1.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL1004_05_01, Channel 2^GVL_KFE_RIX_VAC.fb_LI3K2_K2B_VWC_1.i_xClsLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_LI3K2_K2B_VWC_1.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL1004_05_01, Channel 1^GVL_KFE_RIX_VAC.fb_LI3K2_K2B_VWC_1.i_xOpnLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_LI4K2_K2A_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EP3174_06_01, AI Standard Channel 3^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_GCC_1.i_iPRESS_R, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 16 (EL3174-0002), AI Standard Channel 2^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_GCC_1.i_xDisc_Active, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 19 (EL1124), Channel 4^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_GCC_1.i_xHV_ON, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 19 (EL1124), Channel 3^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_GPI_1.i_iPRESS_R, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 17 (EL3174-0002), AI Standard Channel 1^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 4 (EL3064), AI Standard Channel 3^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 5 (EL1004), Channel 3^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_VGC_1.i_xClsLS, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 14 (EL1004), Channel 2^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_VGC_1.i_xOpnLS, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 14 (EL1004), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_VGC_2.i_xClsLS, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 14 (EL1004), Channel 4^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_VGC_2.i_xOpnLS, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 14 (EL1004), Channel 3^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL3174_03_12, AI Standard Channel 1^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1124_03_10, Channel 2^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1124_03_10, Channel 1^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL3174_03_12, AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GPI_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E3) (EL3064), AI Standard Channel 2^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E4) (EL1004), Channel 2^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_PIP_1.i_xSP_DI
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_1.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_01, Channel 2^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_1.i_xClsLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_1.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_01, Channel 1^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_1.i_xOpnLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_2.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_01, Channel 4^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_2.i_xClsLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_2.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_01, Channel 3^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_2.i_xOpnLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL3174_03_12, AI Standard Channel 3^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1124_03_11, Channel 2^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1124_03_11, Channel 1^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL3174_03_13, AI Standard Channel 1^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GPI_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E3) (EL3064), AI Standard Channel 3^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E4) (EL1004), Channel 3^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_PIP_1.i_xSP_DI
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_1.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_03, Channel 2^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_1.i_xClsLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_1.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_03, Channel 1^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_1.i_xOpnLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_2.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_03, Channel 4^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_2.i_xClsLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_2.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL1004_03_03, Channel 3^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_2.i_xOpnLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL3174_04_09, AI Standard Channel 2^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1124_04_07, Channel 4^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1124_04_07, Channel 3^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL3174_04_09, AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GPI_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E3) (EL3064), AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E4) (EL1004), Channel 4^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_PIP_1.i_xSP_DI
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_1.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1004_04_01, Channel 2^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_1.i_xClsLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_1.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1004_04_01, Channel 1^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_1.i_xOpnLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_2.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1004_04_01, Channel 4^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_2.i_xClsLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_2.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL1004_04_01, Channel 3^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_2.i_xOpnLS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PA1K2_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 57 (EL3064), AI Standard Channel 1^GVL_KFE_RIX_VAC.fb_PA1K2_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PA1K2_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 58 (EL1004), Channel 1^GVL_KFE_RIX_VAC.fb_PA1K2_PIP_1.i_xSP_DI
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_GCC_1.i_iPRESS_R, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 16 (EL3174-0002), AI Standard Channel 1^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_GCC_1.i_xDisc_Active, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 19 (EL1124), Channel 2^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_GCC_1.i_xHV_ON, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 19 (EL1124), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_GPI_1.i_iPRESS_R, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 16 (EL3174-0002), AI Standard Channel 4^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 4 (EL3064), AI Standard Channel 1^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 5 (EL1004), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 119 (EL3174), AI Standard Channel 1^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 123 (EL1124), Channel 2^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 123 (EL1124), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 119 (EL3174), AI Standard Channel 2^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 7 (EL3064), AI Standard Channel 1^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 8 (EL1004), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_VGC_1.i_xClsLS, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 120 (EL1004), Channel 2^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_VGC_1.i_xOpnLS, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 120 (EL1004), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 111 (EP3174-0002), AI Standard Channel 1^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 111 (EP3174-0002), AI Standard Channel 2^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E3) (EL3064), AI Standard Channel 1^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E4) (EL1004), Channel 1^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.i_xSP_DI
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_VGC_1.i_xClsLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002), Channel 2^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_VGC_1.i_xOpnLS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 164 (EL3174-0002), AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xError, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 72 (EL1124), Channel 4^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xError
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xIP_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 72 (EL1124), Channel 3^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.i_xIP_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TM2K2_ATM_GPI_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL3174_05_11, AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GPI_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL3174_05_11, AI Standard Channel 3^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.i_iPRESS_R
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.i_xDisc_Active, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL1124_05_10, Channel 2^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.i_xDisc_Active
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.i_xHV_ON, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL1124_05_10, Channel 1^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.i_xHV_ON
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_GCC_1.i_iPRESS_R, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 16 (EL3174-0002), AI Standard Channel 3^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_GCC_1.i_xDisc_Active, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 20 (EL1124), Channel 2^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_GCC_1.i_xHV_ON, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 20 (EL1124), Channel 1^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_GPI_1.i_iPRESS_R, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 17 (EL3174-0002), AI Standard Channel 2^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 4 (EL3064), AI Standard Channel 4^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 5 (EL1004), Channel 4^Input
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_eVFS_State, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_eVFS_State
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xMPS_OK, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xMPS_OK
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xTrigger, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xTrigger
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xVAC_FAULT_OK, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVAC_FAULT_OK
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xVFS_Closed, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Closed
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.i_xVFS_Open, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Open
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV4K2_GFS_1.i_iPRESS_R, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 68 (EL3064), AI Standard Channel 1^Value
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV4K2_PIP_1.i_iPRESS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 53 (EL3064), AI Standard Channel 4^GVL_KFE_RIX_VAC.fb_TV4K2_PIP_1.i_iPRESS
        plc_kfe_rix_vac Instance, PlcTask Inputs^GVL_KFE_RIX_VAC.fb_TV4K2_PIP_1.i_xSP_DI, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 54 (EL1004), Channel 4^GVL_KFE_RIX_VAC.fb_TV4K2_PIP_1.i_xSP_DI
        plc_kfe_rix_vac Instance, PlcTask Inputs^MAIN.fbArbiterIO.i_stCurrentBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_PRE, IO Inputs^CurrentBP
        plc_kfe_rix_vac Instance, PlcTask Inputs^MAIN.fbArbiterIO.xTxPDO_state, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_PRE, SYNC Inputs^TxPDO state
        plc_kfe_rix_vac Instance, PlcTask Inputs^MAIN.fbArbiterIO.xTxPDO_toggle, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_PRE, SYNC Inputs^TxPDO toggle
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL2624_03_08, Channel 2^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 59 (EL2794), Channel 1^GVL_KFE_RIX_VAC.fb_IM2K2_PPM_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL2624_04_05, Channel 1^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 59 (EL2794), Channel 2^GVL_KFE_RIX_VAC.fb_IM3K2_PPM_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL2624_04_05, Channel 3^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 59 (EL2794), Channel 3^GVL_KFE_RIX_VAC.fb_IM4K2_PPM_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL2624_05_07, Channel 2^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 52 (EL2794), Channel 2^GVL_KFE_RIX_VAC.fb_IM5K2_PPM_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_IM6K2_PPM_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EP2624_06_02, Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 59 (EL2794), Channel 4^GVL_KFE_RIX_VAC.fb_LI2K2_K2A_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_LI3K2_K2B_VWC_1.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL2004_05_02, Channel 1^GVL_KFE_RIX_VAC.fb_LI3K2_K2B_VWC_1.q_xOPN_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_GCC_1.q_xHV_DIS, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 13 (EL2624), Channel 3^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EL2794), Channel 3^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_VGC_1.q_xOPN_DO, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 15 (EL2004), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR1K2_SWITCH_VGC_2.q_xOPN_DO, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 15 (EL2004), Channel 2^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL2624_03_08, Channel 1^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E2) (EL2794), Channel 2^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_1.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL2004_03_02, Channel 1^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_1.q_xOPN_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_2.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL2004_03_02, Channel 2^GVL_KFE_RIX_VAC.fb_MR2K2_FLAT_VGC_2.q_xOPN_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL2624_03_08, Channel 3^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E2) (EL2794), Channel 3^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_1.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL2004_03_02, Channel 3^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_1.q_xOPN_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_2.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_03_00^EL2004_03_02, Channel 4^GVL_KFE_RIX_VAC.fb_MR3K2_KBH_VGC_2.q_xOPN_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL2624_04_05, Channel 2^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E2) (EL2794), Channel 4^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_1.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL2004_04_02, Channel 1^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_1.q_xOPN_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_2.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_04_00^EL2004_04_02, Channel 2^GVL_KFE_RIX_VAC.fb_MR4K2_KBV_VGC_2.q_xOPN_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_PA1K2_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 56 (EL2794), Channel 1^GVL_KFE_RIX_VAC.fb_PA1K2_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_GCC_1.q_xHV_DIS, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 13 (EL2624), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_PC1K1_ZOS_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EL2794), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_RIX_ILK.q_xILK_OK_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EL2794), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 118 (EL2624), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 6 (EL2794), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_SL1K2_EXIT_VGC_1.q_xOPN_DO, TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 121 (EL2004), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^K2S2-DRL-01 (EP2624-0002), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E2) (EL2794), Channel 1^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_VGC_1.q_xOPN_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002), Channel 11^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 52 (EL2794), Channel 3^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 70 (EL2794), Channel 4^GVL_KFE_RIX_VAC.fb_ST3K2_TERM_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^EK1100_05_00^EL2624_05_07, Channel 3^GVL_KFE_RIX_VAC.fb_TM2K2_K2B_GCC_1.q_xHV_DIS
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_GCC_1.q_xHV_DIS, TIID^Device 5 (EtherCAT)^B940-008-K0S15-PNL-03 EK1100^Term 13 (EL2624), Channel 2^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K1_PLEG_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 3 (EL2794), Channel 4^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xCLS_SW, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xCLS_SW
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xOPN_SW, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOPN_SW
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xOverrideMode, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideMode
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xOverrideOpen, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideOpen
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xPRESS_OK, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xPress_OK
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xVAC_FAULT_Reset, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVAC_FAULT_Reset
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xVetoValveClosed, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveClosed
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV1K2_VFS_Interface.q_xVetoValveOpenDO, TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance, FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveOpenDO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV4K2_GFS_1.q_xHV_DIS, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 70 (EL2794), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_KFE_RIX_VAC.fb_TV4K2_PIP_1.q_xHVEna_DO, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 52 (EL2794), Channel 4^GVL_KFE_RIX_VAC.fb_TV4K2_PIP_1.q_xHVEna_DO
        plc_kfe_rix_vac Instance, PlcTask Outputs^GVL_Variables.g_FastFaultOutput1.q_xFastFaultOut, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_FFO (EL2202), Channel 1^Output
        plc_kfe_rix_vac Instance, PlcTask Outputs^MAIN.fbArbiterIO.q_stRequestedBP, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^PMPS_PRE, IO Outputs^RequestedBP
        plc_kfe_rix_vac Instance, PlcTask Outputs^PRG_RIX_INTF.FB_FIM_ILK, TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Term 63 (EK1100) B950-233-100H1-R02-DRL-02^Term 104 (EL2008), Channel 1^PRG_RIX_INTF.FB_FIM_ILK
